# subset-sum

./: .gitignore  CLAUDE.md  CONJECTURES.md  Cargo.toml  README.md  lakefile.lean
.github/workflows/: lean.yml  release.yml  rocq.yml
changelog.d/: 20260125_125234_readme_educational_update.md  20260125_subset_sum_implementation.md  20260126_142354_random_input_defaults.md  20260127_142143_formal_proofs.md  20260127_184758_add_inputset_preprocessing.md
examples/: basic_usage.rs
proofs/set_sequence_equivalence/lean/: SetSequenceEquivalence.lean
proofs/set_sequence_equivalence/rocq/: SetSequenceEquivalence.v
src/: lib.rs  main.rs
src/algorithms/: backtracking.rs  branch_and_bound.rs  brute_force.rs  dynamic_programming.rs  incremental_pruning.rs  max_first_reduction.rs  meet_in_middle.rs  mod.rs  randomized.rs
tests/: integration_test.rs
