[package]
name = "subset-sum"
version = "0.1.0"
edition = "2021"
description = "Subset Sum algorithm implementations and benchmarking tool"
readme = "README.md"
license = "Unlicense"
keywords = ["subset-sum", "algorithms", "benchmarking", "np-complete"]
categories = ["algorithms", "command-line-utilities"]
repository = "https://github.com/konard/subset-sum"
documentation = "https://github.com/konard/subset-sum"
rust-version = "1.70"

[lib]
name = "subset_sum"
path = "src/lib.rs"

[[bin]]
name = "subset-sum"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow some common patterns
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Allow patterns needed for recursive algorithms
items_after_statements = "allow"
too_many_arguments = "allow"
needless_range_loop = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
redundant_closure_for_method_calls = "allow"
option_if_let_else = "allow"
uninlined_format_args = "allow"
similar_names = "allow"
cast_lossless = "allow"
unused_self = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
